crates/wac-parser/tests/resolution/fail/implicit-arg-conflict.wac
package test:comp;

import foo: func();

let x = new foo:bar { ... };
